@@ -9,3 +9,5 @@ DYNAMIC_LINKER=@DYNAMIC_LINKER@
 HAVE_LIBXML=@HAVE_LIBXML@
 
 WITH_FFI=@WITH_FFI@
+
+HAVE_PTHREAD_H=@HAVE_PTHREAD_H@
